fix overflow at footer

--- a/styles/css-styles/style.css
+++ b/styles/css-styles/style.css
@@ -1,6 +1,7 @@
 html {font-family: 'Open Sans', sans-serif; font-size: 150%;}
 *{box-sizing: border-box;}
 body {background-color: powderblue; margin: 5px; text-align: justify; padding: 10px;}
+/* body {background-color: #2C001E; color: #AAFF32; margin: 5px; text-align: justify; padding: 10px;} */
 
 /* Style the header */
 header {padding: 0.5%;}
@@ -9,7 +10,7 @@ header {padding: 0.5%;}
 nav {background-color: #7FFF00; padding: 5px; width: 100%; border-radius: 10px;}
 
 /* Style the footer */
-footer {background-color: #666666; color: #7FFF00; padding: 5px; margin: 2px; margin-top: 50px; text-align: center; border-radius: 10px;}
+footer {background-color: #666666; color: #7FFF00; padding: 5px; margin: 5px; text-align: center; border-radius: 10px;}
 
 /* Create two columns/boxes that floats next to each other */
 #newsbar {background-color: #2C001E; color: #7FFF00; width: 25%; margin: 2px; margin-top: 10px; padding: 10px; float: left; border-radius: 10px;}
@@ -26,6 +27,8 @@ a:hover.bar {background-color: unset;}
 /* aside ul {list-style-type: none; padding: 5px;} */
 
 /* all links */
+/* a {color: #06C2AC; padding: 2px; text-align: center; text-decoration: none; display: inline-block;}
+a:hover {opacity: 1; color: #2C001E; background-color: #06C2AC; border-radius: 10px;} */
 a {padding: 2px; text-align: center; text-decoration: none; display: inline-block;}
 a:hover {opacity: 1; background-color: yellowgreen;}
 
@@ -38,7 +41,7 @@ img {display: block; margin: 5px;}
 img.services {margin: 0px;}
 a.services {opacity: 0.5; padding: 0px;}
 a:hover.services {opacity: 1; background-color: unset; padding: 5px;}
-p.services {line-height: 0px; padding: 0px; margin: 2px;}
+p.services {line-height: 0px; padding: 2px; margin: 2px;}
 p.crights {margin: 2px;}
 
 /* Code snippets */
